syntax = "proto3";
package feos_grpc;

service FeosGrpc {
    rpc Reboot (RebootRequest) returns (RebootResponse);
    rpc Shutdown (ShutdownRequest) returns (ShutdownResponse);
    rpc HostInfo (HostInfoRequest) returns (HostInfoResponse);

    rpc Ping (Empty) returns (Empty);
    
    rpc FetchImage (FetchImageRequest) returns (FetchImageResponse);

    rpc CreateVM (CreateVMRequest) returns (CreateVMResponse);
    rpc GetVM (GetVMRequest) returns (GetVMResponse);
    rpc BootVM (BootVMRequest) returns (BootVMResponse);
    rpc ConsoleVM (stream ConsoleVMRequest) returns (stream ConsoleVMResponse);
    rpc AttachNicVM (AttachNicVMRequest) returns (AttachNicVMResponse);
    rpc ShutdownVM (ShutdownVMRequest) returns (ShutdownVMResponse);
    rpc PingVM (PingVMRequest) returns (PingVMResponse);

    rpc GetFeOSKernelLogs (GetFeOSKernelLogRequest) returns (stream GetFeOSKernelLogResponse);
    rpc GetFeOSLogs(GetFeOsLogRequest) returns (stream GetFeOsLogResponse);
}

message ConsoleVMRequest {
  string uuid = 1;
  string input = 2;
}

message ConsoleVMResponse {
  string message = 1;
}

message GetFeOSKernelLogRequest {}

message GetFeOSKernelLogResponse {
  string message = 1;
}

message GetFeOsLogRequest {}

message GetFeOsLogResponse {
    string message = 1;
}

message AttachNicVMRequest {
        string uuid = 1;
        string mac_address = 2;
        string pci_address = 3;
}
message AttachNicVMResponse {}


message RebootRequest {}
message RebootResponse {}

message ShutdownRequest {}
message ShutdownResponse {}

message HostInfoRequest {}
message HostInfoResponse {
  uint64 uptime = 1;
  uint64 ram_total = 2;
  uint64 ram_unused = 3;
  uint64 num_cores = 4;
  repeated NetInterface net_interfaces = 5;
}

message NetInterface {
    string name = 1;
    string pci_address = 2;
    string mac_address = 3;
}

message Empty {}


message FetchImageRequest {
  string image = 1;
}

message FetchImageResponse {
  string uuid = 1;
}


message CreateVMRequest {
  uint32 cpu = 1; 
  uint64 memory_bytes = 2; 
  string image_uuid = 3;
  optional string ignition = 4; 
}

message CreateVMResponse {
  string uuid = 1;
}

message GetVMRequest {
    string uuid = 1;
}
message GetVMResponse {
  string info = 1;
}

message BootVMRequest {
    string uuid = 1;
}
message BootVMResponse {}

message ShutdownVMRequest {
  string uuid = 1;
}
message ShutdownVMResponse {}

message PingVMRequest {
  string uuid = 1;
}
message PingVMResponse {}